fix cutoff 84%

--- a/new-html/style.css
+++ b/new-html/style.css
@@ -1342,7 +1342,7 @@ li.mobcase {
 
 .modmove img {
 	position: absolute;
-	bottom: 20px;
+	bottom: 10px;
 	left: 20px;
 	max-width: 120px;
 }
